# llm-as-code-selectors-paper

./: .gitignore  CITATION.cff  LICENSE  README.md  baseline.py  eval.ipynb  eval.py  get_llms_results.py  llm_summary.csv  llms.py  llms_chat_models.py  llms_metadata.toml  log.py  plot.py  prepare.py  pyproject.toml  retrieval_algorithms.py
data/: extended_thesaurus.csv  icpc-2_partial.csv  query_history.csv  query_value_counts.csv
latex_tables/: detailed_f1_table.tex  detailed_ideal_f1_table.tex  llm_summary_f1_scores.tex  llm_summary_full.tex  llm_summary_full_ideal.tex  llm_summary_ideal_f1_scores.tex
metrics/: computed_metrics.csv
