[project]
name = "llm-as-code-selectors-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "adjusttext>=1.3.0",
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "jsonlines>=4.0.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-deepseek>=0.1.3",
    "langchain-google-genai>=2.1.8",
    "langchain-huggingface>=0.3.0",
    "langchain-openai>=0.3.28",
    "matplotlib>=3.10.3",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "toml>=0.10.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
]
